# pix

./: .eslintrc.json  .gitignore  .prettierrc  Cargo.toml  lerna.json  package-lock.json  package.json  readme.md  tsconfig.json
.devcontainer/: devcontainer.json
configs/: tsconfig.app.json  tsconfig.base.json  tsconfig.client.json  tsconfig.package.json
src/: index.d.ts  index.js  index.ts  lib.rs
src/lib/: addon.js  addonWrapper.cjs  constants.js  index.mjs  index.node  quantize.js
test/: main.js
