[package]
name = "pix-decode"
version = "0.1.0"
description = "A neon-rust program that obtains an image in buffered format and then returns it decoded with the width, height and data of the image (WIP)."
authors = ["Valentin Marquez"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palette_extract = "0.1.0"
zune-jpeg = "0.4.11"
png = "0.17.11"
gif = "0.13.1"
zune-bmp = "0.4.0"
libwebp = "0.1.2"

[dependencies.neon]
version = "1.0.0-alpha.4"
default-features = false
features = ["napi-6"]
